# modern-cpp-playground

./: .gitignore  CMakeLists.txt  README.md  any.cc  any.hpp  crtp.hpp  test.cc  tests.cc
